force-app/main/default/objects/Bulk_Record_Upload_Bundle_Process__mdt/Bulk_Record_Upload_Bundle_Process__mdt.object-meta.xml
<CustomObject>
    <description
  >Assigns one upload process to an administrator-defined bundle.</description>
    <label>Bulk Record Upload Bundle Process</label>
    <pluralLabel>Bulk Record Upload Bundle Processes</pluralLabel>
</CustomObject>