force-app/main/default/objects/Bulk_Record_Upload_Bundle_Process__mdt/fields/BundleDeveloperName__c.field-meta.xml
<CustomField>
    <fullName>BundleDeveloperName__c</fullName>
    <description
  >Developer Name of the bundle containing this process.</description>
    <inlineHelpText
  >Enter the exact Developer Name of a Bulk Record Upload Bundle.</inlineHelpText>
    <label>Bundle API Name</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>