force-app/main/default/objects/Bulk_Record_Upload_Bundle_Process__mdt/fields/DisplayOrder__c.field-meta.xml
<CustomField>
    <fullName>DisplayOrder__c</fullName>
    <description>Controls the process order within the bundle.</description>
    <label>Display Order</label>
    <precision>5</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>