force-app/main/default/objects/Bulk_Record_Upload_Bundle_Process__mdt/fields/IsActive__c.field-meta.xml
<CustomField>
    <fullName>IsActive__c</fullName>
    <description
  >Controls whether this process is currently offered by its bundle.</description>
    <label>Active</label>
    <defaultValue>false</defaultValue>
    <type>Checkbox</type>
</CustomField>