force-app/main/default/objects/Bulk_Record_Upload_Bundle_Process__mdt/fields/ProcessDeveloperName__c.field-meta.xml
<CustomField>
    <fullName>ProcessDeveloperName__c</fullName>
    <description
  >Developer Name of the upload process offered by this bundle.</description>
    <inlineHelpText
  >Enter the exact Developer Name of an active Bulk Record Upload Process.</inlineHelpText>
    <label>Process API Name</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>